[project]
name = "atlanta-data-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.0.0",
    "beautifulsoup4>=4.14.2",
    "geopandas>=1.1.1",
    "janitor>=0.1.1",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyeducationdata>=0.1.0",
    "pyjanitor>=0.31.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "vega-datasets>=0.9.0",
]
